--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,15 @@
 html,body {
     scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
+}
+
+#home-section {
+    min-height: 700px;
+}
+@media (min-width: 1524px) {
+    #home-section {
+        height: calc(100vh);
+    }
 }
 
 .overflow::-webkit-scrollbar {
@@ -42,4 +52,17 @@ section {
     100% {
         transform: scale(0.9);
     }
+}
+
+
+.shadow-hero-image {
+    -webkit-box-shadow: 10px 10px 48px -7px rgba(0,0,0,0.31);
+    -moz-box-shadow: 10px 10px 48px -7px rgba(0,0,0,0.31);
+    box-shadow: 10px 10px 48px -7px rgba(0,0,0,0.31);
+}
+
+.shadow-facts {
+    -webkit-box-shadow: -23px 21px 43px -17px rgba(0,0,0,0.28);
+    -moz-box-shadow: -23px 21px 43px -17px rgba(0,0,0,0.28);
+    box-shadow: -23px 21px 43px -17px rgba(0,0,0,0.28);
 }
